charts/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalr-gammon
  labels:
    app: signalr-gammon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalr-gammon
  template:
    metadata:
      labels:
        app: signalr-gammon
    spec:
      imagePullSecrets:
        - name: dekreyimages-registry
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: web
          image: "dekreydotnet.azurecr.io/signalrgammon:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
