charts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signalr-gammon
  labels:
    app: signalr-gammon
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: signalr-gammon
