charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signalr-gammon
  labels:
    app: signalr-gammon
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
    - hosts:
      - games.dekrey.net
      secretName: dekrey-net-games-tls
  rules:
    - host: games.dekrey.net
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: signalr-gammon
                port:
                  number: 80
